--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@rneui/themed": "^4.0.0-rc.8",
     "@rnmapbox/maps": "^10.1.27",
+    "@stripe/stripe-react-native": "^0.38.4",
     "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.4.5",
     "expo": "~51.0.20",
@@ -63,7 +64,8 @@
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "undefined": "stripe/stripe-react-native"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
