--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.0",
   "scripts": {
-    "start": "cross-env NODE_ENV=development npx expo start",
+    "start": "cross-env NODE_ENV=development npx expo start -c",
     "start-prod": "cross-env NODE_ENV=production npx expo start -c",
     "start2": "npx expo start -c",
     "reset-project": "node ./scripts/reset-project.js",
@@ -31,7 +31,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@rneui/themed": "^4.0.0-rc.8",
     "@rnmapbox/maps": "^10.1.27",
-    "@stripe/stripe-react-native": "^0.38.4",
+    "@stripe/stripe-react-native": "0.37.2",
     "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.4.5",
     "expo": "~51.0.20",
@@ -54,7 +54,7 @@
     "qf-app-nuevo": "file:",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
     "react-native-picker-select": "^9.1.3",
@@ -64,8 +64,7 @@
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2",
-    "undefined": "stripe/stripe-react-native"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
