--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.0",
   "scripts": {
-    "start": "cross-env NODE_ENV=development npx expo start",
+    "start": "cross-env NODE_ENV=development npx expo start -c",
     "start-prod": "cross-env NODE_ENV=production npx expo start -c",
     "start2": "npx expo start -c",
     "reset-project": "node ./scripts/reset-project.js",
@@ -43,6 +43,7 @@
     "expo-location": "~17.0.1",
     "expo-notifications": "~0.28.10",
     "expo-router": "~3.5.18",
+    "expo-screen-orientation": "~7.0.5",
     "expo-sensors": "~13.0.9",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -52,6 +53,7 @@
     "firebase": "^10.12.2",
     "metro": "~0.80.8",
     "metro-config": "^0.80.9",
+    "qf-app-nuevo": "file:",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -64,8 +66,7 @@
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2",
-    "expo-screen-orientation": "~7.0.5"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
