--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,4 +179,7 @@ dependencies {
 apply from: new File(["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json')"].execute(null, rootDir).text.trim(), "../native_modules.gradle");
 applyNativeModulesAppBuildGradle(project)
 
+// react-native-vector-icons
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
+
 apply plugin: 'com.google.gms.google-services'
