--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         minSdkVersion = Integer.parseInt(findProperty('android.minSdkVersion') ?: '21')
         compileSdkVersion = Integer.parseInt(findProperty('android.compileSdkVersion') ?: '33')
         targetSdkVersion = Integer.parseInt(findProperty('android.targetSdkVersion') ?: '33')
-        kotlinVersion = findProperty('android.kotlinVersion') ?: '1.8.10'
+        kotlinVersion = findProperty('android.kotlinVersion') ?: '1.7.22'
         frescoVersion = findProperty('expo.frescoVersion') ?: '2.5.0'
 
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
@@ -18,7 +18,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.3'
-        classpath('com.android.tools.build:gradle:7.4.2')
+        classpath('com.android.tools.build:gradle:7.3.1')
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.22"
         classpath('com.facebook.react:react-native-gradle-plugin')
     }
 }
@@ -37,5 +38,29 @@ allprojects {
         google()
         mavenCentral()
         maven { url 'https://www.jitpack.io' }
+    }
+
+    configurations.all {
+        resolutionStrategy {
+            // Force all Kotlin libraries to use the same version
+            force "org.jetbrains.kotlin:kotlin-stdlib:1.7.22"
+            force "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.22"
+            force "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.22"
+        }
+    }
+}
+
+// Ensure Kotlin compilation target matches JDK 11 used by Expo SDK 49.
+subprojects {
+    afterEvaluate { proj ->
+        try {
+            proj.tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+                kotlinOptions {
+                    jvmTarget = '11'
+                }
+            }
+        } catch (Exception e) {
+            // Some projects may not apply the kotlin plugin; ignore them.
+        }
     }
 }
